[gd_scene load_steps=5 format=3 uid="uid://ccybfyb2v8rwy"]

[ext_resource type="PackedScene" uid="uid://dsq4lil7y26xw" path="res://Scenes/Components/DefaultMediaControls.tscn" id="1_5jggk"]
[ext_resource type="Theme" uid="uid://d27558cdkugpr" path="res://Assets/Resources/MainTheme.tres" id="1_aqr20"]
[ext_resource type="Script" path="res://Scripts/Components/MediaControlPanel.gd" id="1_r31sv"]
[ext_resource type="Script" path="res://Scripts/SongList.gd" id="4_7okx8"]

[node name="MediaControlPanel" type="Control" groups=["MediaPanel"]]
custom_minimum_size = Vector2(0, 110)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.101852
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_aqr20")
script = ExtResource("1_r31sv")
metadata/_edit_use_anchors_ = true

[node name="MainCont" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 165.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="DefaultMediaControls" parent="MainCont" instance=ExtResource("1_5jggk")]
layout_mode = 2

[node name="QueuePanel" type="Panel" parent="MainCont"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 942)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"QueueBG"

[node name="Label" type="Label" parent="MainCont/QueuePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Queue here"
horizontal_alignment = 1

[node name="QueueCont" type="VBoxContainer" parent="MainCont/QueuePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QueueControls" type="HBoxContainer" parent="MainCont/QueuePanel/QueueCont"]
layout_mode = 2

[node name="Shuffle" type="Button" parent="MainCont/QueuePanel/QueueCont/QueueControls"]
layout_mode = 2
text = "Shuffle
"

[node name="Clear" type="Button" parent="MainCont/QueuePanel/QueueCont/QueueControls"]
layout_mode = 2
text = "Clear
"

[node name="Playlist" type="Button" parent="MainCont/QueuePanel/QueueCont/QueueControls"]
layout_mode = 2
text = "Save To Playlist"

[node name="SongList" type="VBoxContainer" parent="MainCont/QueuePanel/QueueCont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_7okx8")
bookMarks = false

[connection signal="resized" from="MainCont/QueuePanel" to="." method="SizeUpdate"]
[connection signal="pressed" from="MainCont/QueuePanel/QueueCont/QueueControls/Shuffle" to="." method="ShuffleQueue"]
[connection signal="pressed" from="MainCont/QueuePanel/QueueCont/QueueControls/Clear" to="." method="ClearQueue"]
